--- a/css/agency.css
+++ b/css/agency.css
@@ -11,7 +11,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: #fed136;
+  color: #778899;
 }
 p {
   font-size: 14px;
@@ -28,13 +28,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #fed136;
+  color: #778899;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #778899;
 }
 h1,
 h2,
@@ -42,7 +42,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", "Helvetica Neue","Cinzel", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -57,9 +57,9 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #778899;
+  border-color: #778899;
+  font-family: "Montserrat", "Helvetica Neue","Cinzel", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -67,10 +67,10 @@ h6 {
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
-.open .dropdown-toggle.btn-primary {
+.open .dropdow#D3D3D3n-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #778899;
+  border-color: #778899;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -92,18 +92,18 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #778899;
+  border-color: #778899;
 }
 .btn-primary .badge {
-  color: #fed136;
+  color: #778899;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #778899;
+  border-color: #778899;
+  font-family: "Montserrat", "Helvetica Neue","Cinzel", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   border-radius: 3px;
@@ -116,8 +116,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #778899;
+  border-color: #778899;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -139,11 +139,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #778899;
+  border-color: #778899;
 }
 .btn-xl .badge {
-  color: #fed136;
+  color: #778899;
   background-color: white;
 }
 .navbar-custom {
@@ -151,21 +151,21 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  color: #778899;
+  font-family: 'Cinzel', serif;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: ##778899;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: ##778899;
+  border-color: #778899;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -173,7 +173,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: #778899;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -184,18 +184,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #fed136;
+  color: #778899;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: #778899;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #778899;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -234,18 +234,18 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  text-align: center;
-  color: white;
+  text-align: left;
+  color: black;
 }
 header .intro-text {
-  padding-top: 100px;
+  padding-top: 70px;
   padding-bottom: 50px;
 }
 header .intro-text .intro-lead-in {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
+  font-size: 20px;
+  line-height: 20px;
   margin-bottom: 25px;
 }
 header .intro-text .intro-heading {
@@ -278,7 +278,7 @@ header .intro-text .intro-heading {
   }
 }
 section {
-  padding: 100px 0;
+  padding: 70px 0;
 }
 section h2.section-heading {
   font-size: 40px;
@@ -295,7 +295,7 @@ section h3.section-subheading {
 }
 @media (min-width: 768px) {
   section {
-    padding: 150px 0;
+    padding: 70px 0;
   }
 }
 .service-heading {
@@ -378,7 +378,7 @@ section h3.section-subheading {
   position: absolute;
   content: "";
   width: 2px;
-  background-color: #f1f1f1;
+  background-color: #778899;
   left: 40px;
   margin-left: -1.5px;
 }
@@ -400,7 +400,7 @@ section h3.section-subheading {
   float: right;
   padding: 0 20px 0 100px;
   position: relative;
-  text-align: left;
+  text-align: center;
 }
 .timeline > li .timeline-panel:before {
   border-left-width: 0;
@@ -421,10 +421,10 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #fed136;
+  background-color: #778899;
   color: white;
   border-radius: 100%;
-  border: 7px solid #f1f1f1;
+  border: 7px solid #778899;
   text-align: center;
 }
 .timeline > li .timeline-image h4 {
@@ -434,7 +434,7 @@ section h3.section-subheading {
 }
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
-  text-align: left;
+  text-align: center;
   padding: 0 20px 0 100px;
 }
 .timeline > li.timeline-inverted > .timeline-panel:before {
@@ -475,7 +475,7 @@ section h3.section-subheading {
     width: 41%;
     float: left;
     padding: 0 20px 20px 30px;
-    text-align: right;
+    text-align: center;
   }
   .timeline > li .timeline-image {
     width: 100px;
@@ -490,7 +490,7 @@ section h3.section-subheading {
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     float: right;
-    text-align: left;
+    text-align: center;
     padding: 0 30px 20px 20px;
   }
 }
@@ -531,7 +531,7 @@ section h3.section-subheading {
     margin-top: 40px;
   }
   .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 100px 20px 20px;
+    padding: 0 70px 20px 20px;
   }
 }
 .team-member {
@@ -583,7 +583,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #778899;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -652,7 +652,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: #778899;
 }
 .btn:focus,
 .btn:active,
@@ -672,7 +672,7 @@ ul.social-buttons li a:active {
   box-shadow: none;
   border: none;
   min-height: 100%;
-  padding: 100px 0;
+  padding: 70px 0;
   text-align: center;
 }
 .portfolio-modal .modal-content h2 {
@@ -736,11 +736,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: #778899;
 }
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: #778899;
 }
 img::selection {
   background: transparent;
@@ -749,5 +749,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: #778899;
 }
