--- a/css/agency.css
+++ b/css/agency.css
@@ -13,6 +13,9 @@ body {
 .text-primary {
   color: #778899;
 }
+.text-justify {
+  text-align: justify;
+}
 p {
   font-size: 14px;
   line-height: 1.75;
