--- a/css/agency.css
+++ b/css/agency.css
@@ -13,6 +13,12 @@ body {
 .text-primary {
   color: #778899;
 }
+.about-block {
+  width: 100%;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .text-block {
   text-align: justify;
   max-width: 800px;
