--- a/css/agency.css
+++ b/css/agency.css
@@ -295,6 +295,9 @@ section h2.section-heading {
   margin-top: 0;
   margin-bottom: 35px;
 }
+section#contact h2.section-heading {
+  margin-bottom: 15px;
+}
 section h3.section-subheading {
   font-size: 16px;
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
