--- a/css/agency.css
+++ b/css/agency.css
@@ -295,7 +295,7 @@ section h2.section-heading {
   margin-top: 0;
   margin-bottom: 35px;
 }
-section#contact h2.section-heading {
+#contact h2.section-heading {
   margin-bottom: 15px;
 }
 section h3.section-subheading {
