--- a/css/agency.css
+++ b/css/agency.css
@@ -19,6 +19,9 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+#about {
+  margin-bottom: 35px;
+}
 .text-block {
   text-align: justify;
   max-width: 800px;
@@ -294,9 +297,6 @@ section h2.section-heading {
   font-size: 40px;
   margin-top: 0;
   margin-bottom: 35px;
-}
-#contact h2.section-heading {
-  margin-bottom: 15px;
 }
 section h3.section-subheading {
   font-size: 16px;
@@ -581,6 +581,7 @@ section#contact {
 
 section#contact .section-heading {
   color: white;
+  margin-bottom: 15px;
 }
 section#contact .form-group {
   margin-bottom: 25px;
