--- a/css/agency.css
+++ b/css/agency.css
@@ -7,6 +7,9 @@ body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+a {
+  color: inherit;
+}
 .text-muted {
   color: #777777;
 }
