--- a/css/agency.css
+++ b/css/agency.css
@@ -7,7 +7,7 @@ body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-a {
+a:visited {
   color: inherit;
 }
 .text-muted {
