--- a/less/agency.less
+++ b/less/agency.less
@@ -287,6 +287,7 @@ section {
                     h3,
                     h4 {
                         margin: 0;
+                        color: black;
                     }
                 }                
             }            
