--- a/css/agency.css
+++ b/css/agency.css
@@ -196,7 +196,7 @@ fieldset[disabled] .btn-xl.active {
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 1px;
-  color: white;
+  color: gray;
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
