--- a/css/agency.css
+++ b/css/agency.css
@@ -287,7 +287,7 @@ header .intro-text .intro-heading {
   header .intro-text .intro-heading {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: normal;
     font-size: 66px;
     line-height: 75px;
     margin-bottom: 50px;
