--- a/css/agency.css
+++ b/css/agency.css
@@ -169,7 +169,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-brand {
   color: #778899;
   font-family: 'Cinzel', serif;
-  visibility: "hidden";
+  visibility: hidden;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
