--- a/css/agency.css
+++ b/css/agency.css
@@ -409,7 +409,7 @@ section#contact .section-heading {
   color: white;
   margin-bottom: 15px;
   font-family: "Cinzel", "Montserrat", "Helvetica Neue","Cinzel", Helvetica, Arial, sans-serif;
-  font-weight: normal;
+  font-weight: bold;
 }
 section#contact .form-group {
   margin-bottom: 25px;
