--- a/css/agency.css
+++ b/css/agency.css
@@ -380,6 +380,7 @@ section h3.section-subheading {
   font-family: "Cinzel", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-size: 36px;
+  font-weight: normal;
 }
 #portfolio .portfolio-item .portfolio-caption p {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
